# qt6-hash-app

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  sha1hasher.cpp  sha1hasher.h  sha256hasher.cpp  sha256hasher.h
